Fixed contrast error in about

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -331,10 +331,15 @@ label {
 
 /* About page styling */
 .about-pg {
-    width: 75%;
     color: #5fbc40;
     background-color: rgba(46, 46, 46, 0.65);
     border-radius: 10px;
+}
+
+.text-end em {
+    background-color: rgb(255, 255, 255, 0.5);
+    border-radius: 3px;
+    padding: 3px 1px;
 }
 
 /* Login page styling */
@@ -364,8 +369,8 @@ label {
 
 /* Media Queries */
 
-/* Adjustments for medium-sized devices and larger */
-@media (min-width: 768px) {
+/* Adjustments for small and medium-sized devices */
+@media (maz-width: 768px) {
     .user-pg {
         width: 50%;
     }
